test/sema/increment-of-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def main() {
    let i = 5;
    // CHECK: [[@LINE+1]]:6: error: cannot increment immutable value
    i++;
}
